app-test/testdata/typesystem/neg/constant-global-variable-immutability/src/const.cal
namespace constant:
    int a = 0;
    actor GlobalVariableImmutability() ==> :
        do
            a := a + 1; // error
        end
    end
end